src/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_NUMBER__c</fullName>
        <label>ACCOUNT NUMBER</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AURA_DESCRIPTION__c</fullName>
        <label>AURA DESCRIPTION</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Archieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Present_Staying_City__c</fullName>
        <label>Present Staying City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevent_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>candidate_count__c</fullName>
        <label>candidate count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prevent_Save</fullName>
        <active>true</active>
        <errorConditionFormula>Prevent_Save__c  = True</errorConditionFormula>
        <errorMessage>Already Account related Contact is Created By This Name</errorMessage>
    </validationRules>
</CustomObject>